--- a/www/index.html
+++ b/www/index.html
@@ -19,10 +19,11 @@
 			#osm_actions { display: none; margin-top: 1em; }
 			#info { margin-top: 2em; }
 			#b_delete, #b_clear { font-size: 8pt; }
-			#rename, #split, #join, #point, #divide { display: none; }
+			#rename, #split, #join, #point, #divide, #backup { display: none; }
 			.actions input[type='text'] { width: 150px; }
 			#header { border-bottom: 1px solid gray; margin-bottom: 1em; padding-bottom: 1em; }
 			#f_topo, #f_chars, #f_comments { font-size: 10pt; }
+			#backup_saving, #backup_restoring { margin-bottom: 1em; }
 		</style>
 	</head>
 	<body onload="init();">
@@ -58,6 +59,7 @@
 					Импорт <input type="file" accept=".osm,.xml" name="file" id="b_import" onchange="bImport();" style="max-width: 100px;">
 				</form>
 				<iframe name="import_frame" style="display: none;" width="230" height="80" src="about:blank"></iframe>
+				<button onclick="bBackup()">Архив границ</button>
 			</div>
 			<div id="actions" class="actions">
 				<button onclick="bDisable()" id="b_disable">Убрать</button>
@@ -130,6 +132,14 @@
 				</div>
 				<br>
 				<button onclick="bDivideCancel()">Вернуться</button>
+			</div>
+			<div id="backup" class="actions">
+				<button onclick="bBackupSave()" id="backup_save">Сохранить границы</button>
+				<div id="backup_saving">Копирую границы...</div>
+				<div id="backup_restoring">Восстанавливаю границы...</div>
+				<div>Или выберите набор границ для восстановления:</div>
+				<div id="backup_list"></div>
+				<button onclick="bBackupCancel()">Вернуться</button>
 			</div>
 		</div>
 		<div id="map"></div>
