removed some dependencies, made lxml optional

--- a/www/index.html
+++ b/www/index.html
@@ -65,6 +65,9 @@
 				<div id="old_action">
 					<input type="checkbox" id="old" onchange="bOldBorders()"><label for="old"> старые границы</label>
 				</div>
+				<div>
+					<a href="stat.html">Статистика</a>
+				</div>
 			</div>
 			<div id="actions" class="actions">
 				<button onclick="bDisable()" id="b_disable">Убрать</button>
