--- a/www/index.html
+++ b/www/index.html
@@ -8,8 +8,8 @@
 		<script src="lib/Leaflet.Editable.js"></script>
 		<script src="lib/leaflet-hash.js"></script>
 		<script src="lib/jquery-1.11.2.min.js"></script>
+		<script src="config.js"></script>
 		<script src="borders.js"></script>
-		<script>server = 'http://127.0.0.1:5000';</script>
 		<style>
 			html, body, #map, #panel { margin: 0; height: 100%; }
 			#panel { width: 250px; float: right; padding: 1em; font-family: sans-serif; }
