--- a/www/stat.html
+++ b/www/stat.html
@@ -4,8 +4,8 @@
 		<meta charset="utf-8">
 		<title>Статистика границ для MAPS.ME</title>
 		<script src="lib/jquery-1.11.2.min.js"></script>
+		<script src="config.js"></script>
 		<script src="stat.js"></script>
-		<script>server = 'http://127.0.0.1:5000';</script>
 		<style>
 			body > div { display: none; margin-bottom: 1em; }
 			#sizes > div { margin-top: 1em; }
