regions with less than 50 points

--- a/www/stat.html
+++ b/www/stat.html
@@ -42,6 +42,8 @@
 				<div id="areas_100km_list" class="h"></div>
 				Регионов с 50k+ точек в контуре: <span id="areas_50k_points"></span> (<a href="#" onclick="return statOpen('areas_50k_points_list');">список</a>)<br>
 				<div id="areas_50k_points_list" class="h"></div>
+				Регионов до 50 точек в контуре: <span id="areas_100_points"></span> (<a href="#" onclick="return statOpen('areas_100_points_list');">список</a>)<br>
+				<div id="areas_100_points_list" class="h"></div>
 				Регионов с неизвестной площадью: <span id="areas_0"></span> (<a href="#" onclick="return statOpen('areas_0_list');">список</a>)<br>
 				<div id="areas_0_list" class="h"></div>
 			</div>
