Search on Enter

--- a/www/index.html
+++ b/www/index.html
@@ -74,7 +74,7 @@
 					<a href="#" id="poly_all">всё</a>
 				</div>
 				<div id="search">
-					Поиск <input type="text" id="fsearch"><button onclick="doSearch()">&#x1f50d;</button>
+					Поиск <input type="text" id="fsearch"><button id="b_search" onclick="doSearch()">&#x1f50d;</button>
 				</div>
 			</div>
 			<div id="actions" class="actions">
