Encoding URIs, filter by ranks

--- a/www/index.html
+++ b/www/index.html
@@ -108,7 +108,7 @@
 					<b>Статус:</b> <span id="b_status"></span><br>
 					<b>Комментарий:</b><br>
 					<textarea style="width: 240px; height: 200px;" id="b_comment"></textarea><br>
-					<button onclick="bComment()">Отправить</button>
+					<button id="b_comment_send" onclick="bComment()">Отправить</button>
 					<a href="#" onclick="bClearComment(); return false;" id="b_clear">Очистить</a>
 				</div>
 			</div>
