Fix rename field

--- a/www/index.html
+++ b/www/index.html
@@ -99,7 +99,7 @@
 					<span id="b_name"></span><br>
 					<div id="rename">
 						<input type="text" id="b_rename">
-						<button onclick="bRename()">Переименовать</button>
+						<button id="do_rename" onclick="bRename()">Переименовать</button>
 					</div>
 					<b>Оценка размера:</b> <span id="b_size"></span><br>
 					<b>Последняя правка:</b> <span id="b_date"></span><br>
